# pi-wifi-config

./: .gitignore  README.md
.github/workflows/: _release_wheel.yaml  _server_lint.yaml  _server_schema.yaml  _ui_lint_build.yaml  ci.yaml
server/: .gitignore  MANIFEST.in  pyproject.toml
server/src/server/: main.py
server/src/server/routes/: asl.py  configuration.py  favourites.py  wifi.py
server/src/server/utils/: __init__.py  subprocess_runner.py
ui/: .gitignore  package-lock.json  package.json
ui/src/lib/components/: ASLSection.svelte  ConfigSection.svelte  FavouritesSection.svelte  WiFiSection.svelte
ui/src/routes/: +page.svelte
