[project]
name = "server"
version = "0.1.0"
description = "Portable WiFi config server for bootstrapping a RPI"
readme = "README.md"
authors = [
    { name = "Max Herbert", email = "max@maxherbert.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "pydantic>=2.12.0",
    "typer>=0.19.2",
]

[project.scripts]
server = "server.main:cli"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pyright>=1.1.406",
    "ruff>=0.14.0",
]
